# python-template

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.rst  README_TEMPLATE.md  README_TEMPLATE.rst  bootstrap  bootstrap.py  build.py  pyproject.toml  setup.py
.github/: contributing.md  dependabot.yml
.github/workflows/: build_wheels.yaml  deploy.yaml  docker.yaml  pre-commit.yaml  tests.yaml
docs/source/: Installation.rst  conf.py  index.rst
pythontemplate/: __init__.py  __main__.py  _c_extension.pyi  _c_extension.pyx
pythontemplate/_c_src/: foo.h
pythontemplate/cli/: main.py
