[build-system]
requires = ["setuptools>=83.0.0", "setuptools-scm>=10.2.0", "cython>=3.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pythontemplate"
dynamic = ["version"]
description = ""
authors = [{name = "YOUR_NAME_HERE"}]
license = "Apache-2.0"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    # Be as loose as possible if writing a library.
    "typing-extensions>=4.15.0",
    "rich>=10.11.0",
    "cyclopts>=4.21.0",
]

[project.urls]
homepage = "https://github.com/GIT_USERNAME/GIT_REPONAME"
repository = "https://github.com/GIT_USERNAME/GIT_REPONAME"

[project.scripts]
pythontemplate = "pythontemplate.cli.main:run_app"

[dependency-groups]
dev = [
    "coverage[toml]>=7.15.0",
    "cython>=3.0.3",
    "pre-commit>=2.16.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.7.0",
]
docs = [
    "gitpython>=3.1.51",
    "sphinx~=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme~=3.1.0",
]
debug = [
    "ipdb>=0.13.9",
    "line-profiler>=3.5.1",
]

[tool.uv]
default-groups = ["dev", "docs"]
# Rebuild the Cython extension whenever its sources change.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "setup.py" },
    { file = "pythontemplate/_c_extension.pyx" },
    { file = "pythontemplate/cpythontemplate.pxd" },
    { file = "pythontemplate/_c_src/**/*" },
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["pythontemplate*"]

[tool.setuptools.package-data]
pythontemplate = ["py.typed", "*.pyi"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["tests/"]

[tool.ruff]
target-version = 'py310'

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]

ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.codespell]
skip = 'uv.lock,'

[tool.creosote]
venvs=[".venv"]
paths=["pythontemplate"]
deps-file="pyproject.toml"
sections=["project.dependencies"]
exclude-deps =[
  "rich",
  "typing-extensions",
]
